--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # Auto generated files
 [Dd]ebug/
 [Rr]elease/
-build/*
+build/
+SomeOtherIntermediateOutputPath/
+SomeOtherOutputPath/
 *.slo
 *.lo
 *.o
