--- a/template_for_lamm_c_sharp/template_for_lamm_c_sharp.csproj
+++ b/template_for_lamm_c_sharp/template_for_lamm_c_sharp.csproj
@@ -8,4 +8,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <Target Name="CleanAndDelete" AfterTargets="Clean">
+    <RemoveDir Directories="$(BaseIntermediateOutputPath)$(Configuration)" />
+    <RemoveDir Directories="$(BaseOutputPath)" />
+  </Target>
+
 </Project>
