--- a/template_for_lamm_c_sharp/template_for_lamm_c_sharp.csproj
+++ b/template_for_lamm_c_sharp/template_for_lamm_c_sharp.csproj
@@ -8,6 +8,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="library_architecture_mvvm_modify_c_sharp" Version="1.0.0" />
+  </ItemGroup>
+
   <Target Name="CleanAndDelete" AfterTargets="Clean">
     <RemoveDir Directories="$(BaseIntermediateOutputPath)$(Configuration)" />
     <RemoveDir Directories="$(BaseOutputPath)" />
