--- a/named_test_main/AlgorithmsUtilityTestMain/AlgorithmsUtilityTestMain.csproj
+++ b/named_test_main/AlgorithmsUtilityTestMain/AlgorithmsUtilityTestMain.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="C:\Developer\Projects\template_for_lamm_c_sharp\SomeOtherOutputPath\Debug\net8.0-windows\template_for_lamm_c_sharp.dll" />
+    <Reference Include="C:\Developer\Projects\template_for_lamm_c_sharp\output\Debug\net8.0-windows\template_for_lamm_c_sharp.dll" />
   </ItemGroup>
 
   <ItemGroup>
