--- a/template_for_lamm_c_sharp/Directory.Build.props
+++ b/template_for_lamm_c_sharp/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <BaseOutputPath>$(MSBuildThisFileDirectory)..\SomeOtherOutputPath\</BaseOutputPath>
-    <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)..\SomeOtherIntermediateOutputPath\</BaseIntermediateOutputPath>
+    <BaseOutputPath>$(MSBuildThisFileDirectory)..\output\</BaseOutputPath>
+    <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)..\intermediate_output\</BaseIntermediateOutputPath>
   </PropertyGroup>
 </Project>
