--- a/named_test_main/AlgorithmsUtilityTestMain/AlgorithmsUtilityTestMain.csproj
+++ b/named_test_main/AlgorithmsUtilityTestMain/AlgorithmsUtilityTestMain.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <NoWarn>MSB3277</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
